--- a/test_cov2.ipynb
+++ b/test_cov2.ipynb
@@ -160,27 +160,32 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nstart = 1\n",
     "    \n",
     "nend = 15605\n",
     "\n",
+    "# current_dir\n",
+    "current_dir = \"/Users/jerome/Projects/UTMOST/\"\n",
+    "\n",
     "# single mask dir\n",
-    "single_mask_dir = \"/Users/jerome/Projects/UTMOST/database/mask/SCZ/\"\n",
+    "single_mask_dir = current_dir + \"database/mask/SCZ/\"\n",
     "\n",
     "# info file\n",
-    "info_file = \"/Users/jerome/Projects/UTMOST/database/gene_info/gene_info.txt\" \n",
+    "info_file = current_dir + \"database/gene_info/gene_info.txt\" \n",
     "\n",
     "# database dir\n",
-    "db_dir = \"/Users/jerome/Projects/UTMOST/database/weight_db/\"\n",
+    "db_dir = current_dir + \"database/weight_db/\"\n",
     "\n",
     "# covariance dir \n",
-    "cov_dir = \"/Users/jerome/Projects/UTMOST/database/cov/1226/\"\n",
+    "cov_dir = current_dir + \"database/cov/1226/\"\n",
     "\n",
     "# output dir \n",
-    "out_dir = \"/Users/jerome/Projects/UTMOST/results/\"\n",
+    "out_dir = current_dir + \"results/\"\n",
     "\n",
     "# read list of genes\n",
     "gene_info = pd.read_table(info_file)\n",
@@ -16167,7 +16172,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gene = \"KRTAP16-1\"\n",
@@ -16280,7 +16287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
